css/style.css
html {
    scroll-behavior: smooth;
}

header {
    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
        url("../imgs/background3.jpg");
    height: 100vh;
    background-position: center;
    background-attachment: fixed;
    background-size: cover;
    letter-spacing: 2px;
    color: #fff;
    text-shadow: 1px 1px 0 #333,
        -1px -1px 0 #333,
        1px -1px 0 #333,
        -1px 1px 0 #333,
        2px 2px 5px rgba(0, 0, 0, 0.65);
}

header h1 {
    color: #fff;
}

@media screen and (min-width: 400px) {
    #typewriter {
        overflow: hidden;
        border-right: 3px solid #fff;
        white-space: nowrap;
        margin: 0 auto;
        animation: typing 2s steps(35) 1s 1 normal both, blink .5s step-end infinite alternate;
        animation-delay: 1s;
        letter-spacing: 2px;
    }
}

@keyframes typing {
    from {
        width: 0
    }
    to {
        width: 13em
    }
}

@keyframes blink {
    50% {
        border-color: transparent
    }
}

.floating {
    animation-name: floating;
    animation-duration: 3s;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
    color: #fff;
}

@keyframes floating {
    0% {
        transform: translate(0, 0px);
    }

    50% {
        transform: translate(0, 15px);
    }

    100% {
        transform: translate(0, -0px);
    }
}

header img {
    max-width: 15%;
}

.nav-pills .nav-item:hover {
    background-color: #bbc3c6;
}

.social {
    color: rgba(255, 255, 255, .6);
    transition: color 0.2s;
    padding-left: 2px;
}

.social:hover {
    color: white;
}

.expand-caret {
    color: black;
    transition: opacity 0.2s, transform 0.2s;
    opacity: 1;
}

.expand-caret:hover {
    opacity: 0.7;
}

a[aria-expanded="false"]>.expand-caret {
    transform: rotate(90deg);
}

